# python-eel-systemd

./: README.md  pyproject.toml
src/eelsystemd/: main.py
src/eelsystemd/web/: package.json  tsconfig.json
src/eelsystemd/web/src/: App.tsx  eel.ts  index.html  index.tsx
src/eelsystemd/web/src/components/: Main.tsx
