[tool.poetry]
name = "eelsystemd"
version = "0.1.0"
description = ""
authors = ["yamashita-optarc <yamashita@optarc.net>"]

[tool.poetry.scripts]
eelsystemd = "eelsystemd.main:run"

[tool.poetry.dependencies]
python = "^3.10"
Eel = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
